--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </a>
     <p>There's nothing worse than having the time and the people to play... or maybe even
         the blessing of your wife's permission... </br>
-        But then no one can make a decision on which course to play at. Or no one an decide on
+        But then no one can make a decision on which course to play at. Or no one can decide on
         what the teams will be. </p>
     <p>The golf randomizer is a tool that can be used to help you and your buddies decide
         on what course to play at and what teams you'll be separated into.</p>
