--- a/golfrandomizerfake.html
+++ b/golfrandomizerfake.html
@@ -20,7 +20,7 @@
     </div>
     <div id="sendmetogroup">
         <a id="fake" style="text-decoration: none;" href="./images/fakenews.jpg">
-            Send me to a friend that lies on their score card all the time.</a></br></br>
+            Click & send me to a friend that never believes their score is that high.</a></br></br>
         <a id="short" style="text-decoration: none;" href="./images/shortallday.jpg">
             Send me to your short friend.</a></br></br>
         <a id="stays" style="text-decoration: none;" href="./images/staysonthecourse.jpg">
